# causal-quantum-gravity

./: .gitignore  AUDIT_BRIEF.md  CLAUDE.md  KGMAP.md  LOGBOOK.md  Makefile  README.md  SUPPLEMENT.md  requirements.txt
formal/: InfoActionStationarity.v  InfoAnalysisLift.v  InfoAreaLaw.v  InfoAsymmetricSeedTrifurcation.v  InfoBackReaction.v  InfoBoundaryScreening.v  InfoCausalSignature.v  InfoCeilingMonotone.v  InfoCoercivityBoundedClosure.v  InfoCompanionSkew.v  InfoConeInheritance.v  InfoConnectionFromFrame_attempt.v  InfoContinuumLimit_nD.v  InfoCrossTermDominance.v  InfoCubicLinearization.v  InfoCurvatureBalance.v  InfoCurvatureNoether.v  InfoCutGrowth.v  InfoDegreeFromCurvature.v  InfoDiscreteGaussBonnet_attempt.v  InfoDiscreteGraphCurvature.v  InfoDiscreteLeibnizObstruction_attempt.v  InfoDiscreteRiemannCommutator_attempt.v  InfoDiscreteRiemannCurvature_attempt.v  InfoDiscreteSecondBianchi_attempt.v  InfoDiskBeforeLock.v  InfoDissipationIsIndependent_attempt.v  InfoEntropyLicense.v  InfoErasureArrowOfTime_attempt.v  InfoGraphFluxBalance.v  InfoGraphGrowth.v  InfoGraphNoether.v  (+49 more)
spine_pde/: README.md  pyproject.toml
spine_pde/benchmarks/: hard_problem.py
spine_pde/benchmarks/physics/: cosmology.py  curvature.py  matter.py  quantum.py
spine_pde/examples/: exact_curvature.py  example_crossover.py  example_evolve.py  quickstart.py
spine_pde/spine_pde/: __init__.py  __main__.py  cli.py  curvature.py  exact.py  graph.py  potentials.py  spine.py  telegraph.py
spine_pde/tests/: test_curvature.py  test_exact.py  test_graph.py  test_spine.py  test_telegraph.py
(+20 files in other folders)
